Dodal svojo fotko

--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
            cupiditate minima ipsa vitae voluptate quas
             inventore itaque, aut repudiandae deleniti architecto
              nisi.</p>
+	<p>Teče lava - Fugina</p>
+	<img src="Foto/lava.webp" alt="Lava na Siciliji" height="300">
 </body>
 </html>
